--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="style.css">
+
     <title>Projeto Social</title>
 </head>
 <body>
-    
+    <main>
+        <section id="CellPhone">
+
+        </section>
+        <section id="RedesSociais">
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </section>
+    </main>
 </body>
 </html>
