--- a/index.html
+++ b/index.html
@@ -16,16 +16,33 @@
         <section id="CellPhone">
 
             <iframe src="home.html" name="tela" id="tela" frameborder="0">
-
+                Seu navegador não é compativel com este tipo de mídia
             </iframe>
             
         </section>
         <section id="RedesSociais">
 
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="" target="tela">
+
+                <img src="imagens/usaveis/logo-home.jpg" alt="jpg">
+
+            </a> <br>
+
+            <a href="" target="tela">
+
+                <img src="imagens/usaveis/logo-instagram.jpg" alt="jpg">
+
+            </a> <br>
+            <a href="" target="tela">
+
+                <img src="imagens/usaveis/logo-github.jpg" alt="jpg">
+
+            </a> <br>
+            <a href="" target="tela">
+
+                <img src="imagens/usaveis/logo-youtube.jpg" alt="jpg">
+
+            </a>
 
         </section>
 
