--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
         </section>
         <section id="RedesSociais">
 
-            <a href="" target="tela">
+            <a href="home.html" target="tela">
 
-                <img src="imagens/usaveis/logo-home.jpg" alt="jpg">
+                <img src="imagens/usaveis/logo-home.jpg" alt="jpg" id="tela-home">
 
             </a> <br>
 
-            <a href="" target="tela">
+            <a href="instagram.html" target="tela">
 
                 <img src="imagens/usaveis/logo-instagram.jpg" alt="jpg">
 
             </a> <br>
-            <a href="" target="tela">
+            <a href="git.html" target="tela">
 
                 <img src="imagens/usaveis/logo-github.jpg" alt="jpg">
 
             </a> <br>
-            <a href="" target="tela">
+            <a href="youtube.html" target="tela">
 
                 <img src="imagens/usaveis/logo-youtube.jpg" alt="jpg">
 
